# cross-language-match

./: .gitignore  CMakeLists.txt  LICENSE.md  LICENSE.txt  README.md  sample-web-page.html
assets/txt/: test-pairs-multi-comma.csv  test-pairs-no-comma.csv  test-pairs.csv
include/: button.h  file_word_loader.h  game.h  game_helper.h  game_utility.h  interactive_text.h  labeled_button.h  string_word_loader.h  text.h  word_loader.h  word_pair_file_loader.h
include/button/: button.h  button_event.h  cancellation_circle_button.h  labeled_button.h  rectangular_button.h
include/scene/: game_scene.h  help_scene.h  load_scene.h  load_scene_emscripten.h  scene.h  start_scene.h
include/shape/: circle.h  circle_with_x.h  rectangle.h
include/text/: interactive_text.h  text.h
include/word_loader/: file_word_loader.h  string_word_loader.h  word_loader.h
src/: button.cc  file_word_loader.cc  game.cc  game_helper.cc  game_utility.cc  interactive_text.cc  labeled_button.cc  main.cc  string_word_loader.cc  text.cc  word_loader.cc  word_pair_file_loader.cc
src/button/: button.cc  cancellation_circle_button.cc  labeled_button.cc  rectangular_button.cc
src/scene/: game_scene.cc  help_scene.cc  load_scene.cc  load_scene_emscripten.cc  scene.cc  start_scene.cc
src/shape/: circle.cc  circle_with_x.cc  rectangle.cc
src/text/: interactive_text.cc  text.cc
src/word_loader/: file_word_loader.cc  string_word_loader.cc  word_loader.cc
